# afaan-oromo-compiler

./: .gitignore  README.md  __main__.py  ao  ao_runner.py  debug_lexer.py  generate_beautiful_ppt.py  generate_ppt.py  inspect_ppt.py  install.ps1  install.sh  pyproject.toml  restyle_ppt.py  restyle_ppt_safe.py  run.py  test.ao  test.py  test_builtins.ao  test_math.ao  translator.py  unlock_ppt.py
afaan_oromo_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: app.ao  app.py  bad.ao  hello.ao  hello.py  keywords.ao  math.ao  math_ao.py  test_p1.ao  test_p2.ao  test_p3.ao
examples/comprehensive/: builtins.ao  class.ao  container.ao  control_flow.ao  math_test.ao  strings.ao
pythoncompiler/: __init__.py  paths.py
src/: __init__.py
src/codegen/: __init__.py  python_generator.py
src/compiler/: __init__.py  project.py
src/errors/: __init__.py  diagnostics.py
src/lexer/: __init__.py  lexer.py  tokens.py
src/parser/: __init__.py  ast.py  parser.py
src/utils/: __init__.py  file_io.py  modules.py  names.py
temp_pptx_inspect/: [Content_Types].xml
temp_pptx_inspect/ppt/: presentation.xml
temp_pptx_inspect/ppt/_rels/: presentation.xml.rels
temp_pptx_inspect/ppt/slides/: slide1.xml  slide10.xml  slide11.xml  slide12.xml  slide13.xml  slide14.xml  slide15.xml  slide16.xml  slide17.xml  slide18.xml  slide19.xml  slide2.xml  slide20.xml  slide21.xml  slide22.xml  slide23.xml  slide24.xml  slide25.xml  slide26.xml  (+25 more)
vscode-oromolang/: language-configuration.json  package.json
vscode-oromolang/syntaxes/: oromo.tmLanguage.json
